--- a/docker-compose-t2.yml
+++ b/docker-compose-t2.yml
@@ -12,14 +12,15 @@ networks:
 services:
 
 # watchtower 
-  NzbGet:
-    container_name: NzbGet
+  Watchtower:
+    container_name: Watchtower
     image: containrrr/watchtower:latest
     restart: unless-stopped
     networks:
       - docker_default
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ${USERDIR}/docker/watchtower:/config
     environment:
       - PUID=$PUID
       - PGID=$PGID
